{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 184,
  "lineage": "8a2d5978-f659-4b79-6dc2-a7e5e49b32ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007f35e81392786a4",
            "arn": "arn:aws:ec2:us-east-1:905418296309:instance/i-027a07509ab7f231d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Jenkins-master-full-access-profile",
            "id": "i-027a07509ab7f231d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "Jenkins-master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000064ad86ea74832",
            "private_dns": "ip-176-0-0-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "176.0.0.75",
            "public_dns": "ec2-34-204-89-117.compute-1.amazonaws.com",
            "public_ip": "34.204.89.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:905418296309:key/4d0f191f-2980-4336-9d6b-60c78a1e7d91",
                "throughput": 125,
                "volume_id": "vol-0100da62d6743539d",
                "volume_size": 64,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f9a7c980a85e296",
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05089a15d8ce70745"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.Jenkins-master-instance-role",
            "aws_iam_role.Jenkins-master-role",
            "aws_iam_role_policy_attachment.Administrationaccess",
            "aws_key_pair.Jenkins-master",
            "aws_security_group.Jenkins-master-sg",
            "aws_subnet.Jenkins-master-public",
            "aws_vpc.Jenkins-master",
            "data.aws_ami.ubuntu_latest",
            "tls_private_key.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Jenkins-master-internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:internet-gateway/igw-0d3c037711ea54a08",
            "id": "igw-0d3c037711ea54a08",
            "owner_id": "905418296309",
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "vpc_id": "vpc-0d4ec2cf86caad318"
          },
          "dependencies": [
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:route-table/rtb-0e2ebfaaccadcaa8f",
            "id": "rtb-0e2ebfaaccadcaa8f",
            "owner_id": "905418296309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3c037711ea54a08",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4ec2cf86caad318"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Jenkins-master-internet-gw",
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003bc8fd43257ae09",
            "route_table_id": "rtb-0e2ebfaaccadcaa8f",
            "subnet_id": "subnet-08f9a7c980a85e296"
          },
          "dependencies": [
            "aws_internet_gateway.Jenkins-master-internet-gw",
            "aws_route_table.public",
            "aws_subnet.Jenkins-master-public",
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:security-group/sg-05089a15d8ce70745",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-05089a15d8ce70745",
            "ingress": [],
            "name": "jenkins-master",
            "name_prefix": "",
            "owner_id": "905418296309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4ec2cf86caad318"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Jenkins-master-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:subnet/subnet-08f9a7c980a85e296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "176.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f9a7c980a85e296",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418296309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "vpc_id": "vpc-0d4ec2cf86caad318"
          },
          "dependencies": [
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:vpc/vpc-0d4ec2cf86caad318",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "176.0.0.0/16",
            "default_network_acl_id": "acl-00a79dd04921a45d2",
            "default_route_table_id": "rtb-03cf9ed1e040c783b",
            "default_security_group_id": "sg-0bfcc06cdf2a70612",
            "dhcp_options_id": "dopt-07a39030d2cb693d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4ec2cf86caad318",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cf9ed1e040c783b",
            "owner_id": "905418296309",
            "tags": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            },
            "tags_all": {
              "Name": "Jenkins-master",
              "Purpose": "Learning",
              "createdBy": "Mahesh",
              "creationdate": "2025-02-17"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:security-group-rule/sgr-0a3518a30459b3280",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a3518a30459b3280",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05089a15d8ce70745",
            "security_group_rule_id": "sgr-0a3518a30459b3280",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-master-sg",
            "aws_vpc.Jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:security-group-rule/sgr-0117df1df22451c40",
            "cidr_ipv4": "167.103.20.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0117df1df22451c40",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05089a15d8ce70745",
            "security_group_rule_id": "sgr-0117df1df22451c40",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-master-sg",
            "aws_vpc.Jenkins-master",
            "data.http.myip"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:security-group-rule/sgr-0a4f556513d953893",
            "cidr_ipv4": "167.103.20.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0a4f556513d953893",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05089a15d8ce70745",
            "security_group_rule_id": "sgr-0a4f556513d953893",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-master-sg",
            "aws_vpc.Jenkins-master",
            "data.http.myip"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418296309:security-group-rule/sgr-0878fe76da1d83778",
            "cidr_ipv4": "167.103.20.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0878fe76da1d83778",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05089a15d8ce70745",
            "security_group_rule_id": "sgr-0878fe76da1d83778",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-master-sg",
            "aws_vpc.Jenkins-master",
            "data.http.myip"
          ]
        }
      ]
    }
  ]
}